<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.rochblondiaux</groupId>
    <artifactId>blockbenchmodelreader</artifactId>
    <version>1.2</version>
    <packaging>jar</packaging>

    <name>BlockBench-Model-Reader</name>
    <description>A simple library to read BlockBench models.</description>
    <url>https://github.com/RochBlondiaux/BlockBenchModelReader</url>

    <!-- licenses -->
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <!-- developers -->
    <developers>
        <!-- Roch Blondiaux -->
        <developer>
            <id>kiwix</id>
            <name>Roch Blondiaux</name>
            <email>contact@roch-blondiaux.com</email>
            <organizationUrl>https://vulkantechnologies.com</organizationUrl>
            <url>https://roch-blondiaux.com</url>
            <organization>Vulkan Technologies</organization>
        </developer>
    </developers>

    <!-- contributors -->
    <contributors>
        <!-- mrlarkyy -->
        <contributor>
            <name>MrLarkyy</name>
            <url>https://github.com/MrLarkyy</url>
        </contributor>
    </contributors>

    <!-- scm -->
    <scm>
        <connection>scm:git:git://github.com/RochBlondiaux/BlockBenchModelReader.git</connection>
        <developerConnection>scm:git:ssh://github.com:RochBlondiaux/BlockBenchModelReader.git</developerConnection>
        <url>https://github.com/RochBlondiaux/BlockBenchModelReader/tree/main</url>
    </scm>

    <!-- issue management -->
    <issueManagement>
        <url>https://github.com/RochBlondiaux/BlockBenchModelReader/issues</url>
        <system>github</system>
    </issueManagement>

    <!-- properties -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
    </properties>

    <!-- dependencies -->
    <dependencies>
        <!-- lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>
        <!-- jetbrains annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
        </dependency>
        <!-- gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- creative -->
        <dependency>
            <groupId>team.unnamed</groupId>
            <artifactId>creative-api</artifactId>
            <version>1.7.3</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <!-- build -->
    <build>
        <!-- plugin management -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.2.6</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <!-- plugins -->
        <plugins>
            <!-- compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <!-- javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.10.0</version>
                <configuration>
                    <show>public</show>
                </configuration>
            </plugin>
            <!-- maven central publishing -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.5.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
            <!-- maven source plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- gpg -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <keyname>${gpg.keyname}</keyname>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
